MDEV-8723 Wrong result for SELECT..WHERE COLLATION(a)='binary' AND a='a'